Horizontal Scroll fixed

--- a/Code/src/components/LeaderboardComponent.css
+++ b/Code/src/components/LeaderboardComponent.css
@@ -196,8 +196,6 @@
 /* Scrollbar container (track) */
 ::-webkit-scrollbar {
     display: flex;
-    width: 16px;
-    height: 590px;
     padding-bottom: 470px;
     flex-direction: column;
     align-items: center;
